feat: manage alertmanager silence lifecycle
